添加视频播放实验

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".mvp.MVPActivity" />
-        <activity android:name=".touchevent.TouchEventActivity"></activity>
+        <activity android:name=".touchevent.TouchEventActivity" />
+        <activity android:name=".video.VideoActivity" />
     </application>
 
 </manifest>
