--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     package="com.serbad.androidexample">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +22,7 @@
         <activity android:name=".mvp.MVPActivity" />
         <activity android:name=".touchevent.TouchEventActivity" />
         <activity android:name=".video.VideoActivity" />
+        <activity android:name=".fresco.FrescoActivity" />
     </application>
 
 </manifest>
